Add class codes

--- a/teaching/for224.md
+++ b/teaching/for224.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Fort Street
-parent: Teaching
+title: FOR224
+parent: Classes
 ---
 
-# Fort Street
+# FOR224
 {: .no_toc }
 
 ## Table of contents
