--- a/teaching/ken224.md
+++ b/teaching/ken224.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Kensington
-parent: Teaching
+title: KEN224
+parent: Classes
 ---
 
-# Kensington
+# KEN224
 {: .no_toc }
 
 ## Table of contents
