--- a/teaching/lcw224.md
+++ b/teaching/lcw224.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Lane Cove West
-parent: Teaching
+title: LCW224
+parent: Classes
 ---
 
-# Lane Cove West
+# LCW224
 {: .no_toc }
 
 ## Table of contents
