--- a/teaching/neu224.md
+++ b/teaching/neu224.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Neutral Bay
-parent: Teaching
+title: NEU224
+parent: Classes
 ---
 
-# Neutral Bay
+# NEU224
 {: .no_toc }
 
 ## Table of contents
