Move classes script

--- a/classes/ken224.md
+++ b/classes/ken224.md
@@ -62,4 +62,4 @@ Check in with an instructor if you finish a challenge to get it ticked off!
 - [ ] 🤐 Add Glowstone to the ceiling of your Secret Bunker.
 - [ ] 🏰 Move the Builder down and to the middle of a wall to place a Crimson Door.
 
-<script src="{{site.url}}/junior-engineers/assets/class.js"></script>
+<script src="{{site.url}}/assets/classes.js"></script>
