--- a/classes/lcw224.md
+++ b/classes/lcw224.md
@@ -69,4 +69,4 @@ Check in with an instructor if you finish a challenge to get it ticked off!
 - [ ] 🔨 Add a third repeating layer to your skyscraper (e.g. brick, glass, stone).
 - [ ] 🤐 Add Glowstone to the ceiling of your Secret Bunker using the Code Builder.
 
-<script src="{{site.url}}/junior-engineers/assets/class.js"></script>
+<script src="{{site.url}}/assets/classes.js"></script>
