--- a/classes/neu224.md
+++ b/classes/neu224.md
@@ -83,4 +83,4 @@ Check in with an instructor if you finish a challenge to get it ticked off!
 - [ ] 🤐 Add Glowstone to the ceiling of your Secret Bunker using the Code Builder.
 - [ ] 🧱 Create a function to build the roof for your House.
 
-<script src="{{site.url}}/junior-engineers/assets/class.js"></script>
+<script src="{{site.url}}/assets/classes.js"></script>
