--- a/classes/for224.md
+++ b/classes/for224.md
@@ -73,4 +73,4 @@ Check in with an instructor if you finish a challenge to get it ticked off!
 - [ ] 🤐 Add Glowstone to the ceiling of your Secret Bunker using the Code Builder.
 - [ ] 🔥 Place the torches between the ridges instead of on top of them.
 
-<script src="../assets/class.js"></script>
+<script src="{{site.url}}/assets/classes.js"></script>
