--- a/classes/fst224.md
+++ b/classes/fst224.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: FOR224
+title: FST224
 parent: Classes
 ---
 
-# FOR224
+# FST224: Creative Coding
 {: .no_toc }
 
 ## Table of contents
