--- a/classes/nba224.md
+++ b/classes/nba224.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: NEU224
+title: NBA224
 parent: Classes
 ---
 
-# NEU224
+# NBA224: Creative Coding
 {: .no_toc }
 
 ## Table of contents
