Update Christmas project

--- a/classes/lcw224.md
+++ b/classes/lcw224.md
@@ -49,7 +49,7 @@ If you want to review any code from previous weeks, click on the relevant projec
   <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_DzzgxMFzi2Um">Castles</button>
   <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_Lj410sJ6PXsg">Fountains</button>
   <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_8oWCVoCfmVwU">Ancient Temples</button>
-  <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_HhcVTR8gfTjb">Christmas</button>
+  <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_iga1kEE0YCwi">Christmas</button>
   <!--
   <button class="btn mr-2 mb-2" id="zoos">Zoos</button>
   -->
