--- a/classes/lcw224.md
+++ b/classes/lcw224.md
@@ -22,7 +22,7 @@ Click on your name to copy your username to the clipboard.
   <button class="btn mr-2 mb-2" id="instructor10">Tony<span style="display:none">🎃🔨</span></button>
   <button class="btn mr-2 mb-2" id="instructor10">Eric<span style="display:none"></span></button>
   <button class="btn mr-2 mb-2" id="junior142">Amir<span style="display:none"></span></button>
-  <button class="btn mr-2 mb-2" id="junior143">Benny<span style="display:none"></span></button>
+  <button class="btn mr-2 mb-2" id="junior143">Benny the great<span style="display:none"></span></button>
   <button class="btn mr-2 mb-2" id="junior144">Andrew<span style="display:none"></span></button>
   <button class="btn mr-2 mb-2" id="junior215">William<span style="display:none"></span></button>
   <button class="btn mr-2 mb-2" id="junior146">Adam<span style="display:none"></span></button>
@@ -49,7 +49,7 @@ If you want to review any code from previous weeks, click on the relevant projec
   <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_DzzgxMFzi2Um">Castles</button>
   <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_Lj410sJ6PXsg">Fountains</button>
   <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_8oWCVoCfmVwU">Ancient Temples</button>
-  <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_iga1kEE0YCwi">Christmas</button>
+  <button class="btn mr-2 mb-2" id="https://minecraft.makecode.com/#pub:_J6xbxDbKy2zt">Christmas</button>
   <!--
   <button class="btn mr-2 mb-2" id="zoos">Zoos</button>
   -->
