Remove from navigation menu

--- a/classes/fst224.md
+++ b/classes/fst224.md
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: FST224
+title: FST224: Creative Coding
 parent: Classes
+nav_exclude: true
 ---
 
 # FST224: Creative Coding
