--- a/classes/ken224.md
+++ b/classes/ken224.md
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: KEN224
+title: KEN224: Creative Coding
 parent: Classes
+nav_exclude: true
 ---
 
 # KEN224: Creative Coding
