--- a/classes/lcw224.md
+++ b/classes/lcw224.md
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: LCW224
+title: LCW224: Creative Coding
 parent: Classes
+nav_exclude: true
 ---
 
 # LCW224: Creative Coding
