--- a/classes/nba224.md
+++ b/classes/nba224.md
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: NBA224
+title: NBA224: Creative Coding
 parent: Classes
+nav_exclude: true
 ---
 
 # NBA224: Creative Coding
