Move scripts into subdirectory

--- a/classes/bal2241.md
+++ b/classes/bal2241.md
@@ -57,4 +57,4 @@ Click on your name to copy your username to the clipboard.
   <button class="btn mr-2 mb-2" id="junior15">junior15<span style="display:none"></span></button>
 </div>
 
-<script src="{{site.url}}/assets/classes.js"></script>
+<script src="{{site.url}}/assets/js/classes.js"></script>
