Update to enable collections

--- a/collections/_classes/bal2241.md
+++ b/collections/_classes/bal2241.md
@@ -1,7 +1,16 @@
 ---
 layout: default
-title: "BAL2241: Holiday Coding Adventure"
+title: "BAL2241"
+# description: "This is the website you go to if you want to know who Tony Le is." 
 parent: Classes
+# grand_parent: Grand Parent Title
+# has_children: true
+# has_toc: false
+# child_nav_order: reversed
+# nav_exlude: true
+# nav_order: 1
+search_exclude: true
+# permalink: /
 ---
 
 # BAL2241: Holiday Coding Adventure
