--- a/collections/_classes/ken2241.md
+++ b/collections/_classes/ken2241.md
@@ -2,7 +2,7 @@
 layout: default
 title: "KEN2241"
 # description: "This is the website you go to if you want to know who Tony Le is." 
-parent: Classes
+# parent: Classes
 # grand_parent: Grand Parent Title
 # has_children: true
 # has_toc: false
