--- a/collections/_classes/lcw224.md
+++ b/collections/_classes/lcw224.md
@@ -1,7 +1,16 @@
 ---
 layout: default
-title: "LCW224: Creative Coding"
-parent: Classes
+title: "LCW224"
+# description: "This is the website you go to if you want to know who Tony Le is." 
+# parent: Parent Title
+# grand_parent: Grand Parent Title
+# has_children: true
+# has_toc: false
+# child_nav_order: reversed
+# nav_exlude: true
+# nav_order: 1
+search_exclude: true
+# permalink: /
 ---
 
 # LCW224: Creative Coding
