Add up-to-date code

--- a/collections/_wiki/javascript/p5.js.md
+++ b/collections/_wiki/javascript/p5.js.md
@@ -24,6 +24,49 @@ parent: JavaScript
 
 ---
 
+## Pong
+
+```javascript
+// setup() runs once
+function setup() {
+  createCanvas(400, 400);
+}
+
+// Initialise variables
+let xBall = 200;
+let yBall = 200;
+let xSpeed = 10;
+let ySpeed = 10;
+let scoreOne = 0;
+let scoreTwo = 0;
+let playerOne = 175;
+let playerTwo = 175;
+
+// draw() loops forever until stopped
+function draw() {
+  background("#FFFFFF");
+  circle(200, 200, 20);
+  rect(200, 0, 1, 400);
+  rect(30, playerOne, 10, 50);
+  rect(370, playerTwo, 10, 50);
+  
+  keyPressed();
+}
+
+// keyPressed() is called once every time a key is pressed
+function keyPressed() {
+  if (key == "w") {
+    playerOne -= 5;
+  } else if (key == "s") {
+    playerOne += 5; 
+  } else if (key == "i") {
+    playerTwo -= 5;
+  } else if (key == "k") {
+    playerTwo += 5;
+  }
+}
+```
+
 ## External links
 {: .no_toc .text-delta }
 
