--- a/collections/_wiki/javascript/p5.js.md
+++ b/collections/_wiki/javascript/p5.js.md
@@ -50,6 +50,8 @@ function draw() {
   rect(30, playerOne, 10, 50);
   rect(370, playerTwo, 10, 50);
   
+  move();
+  bounce()
   keyPressed();
 }
 
@@ -63,6 +65,26 @@ function keyPressed() {
     playerTwo -= 5;
   } else if (key == "k") {
     playerTwo += 5;
+  }
+}
+
+function move() {
+  xBall += xSpeed;
+  yBall += ySpeed;
+}
+
+function bounce() {
+
+  if (xBall < 10){
+    scoreTwo++;
+    resetBall()
+  }  
+  if (xBall > 390) {
+    scoreOne++;
+    resetBall()
+  }
+  if (yBall < 10 || yBall > 400 - 10) {
+    ySpeed *= -1;
   }
 }
 ```
