Add code from previous lesson

--- a/collections/_wiki/javascript/p5.js.md
+++ b/collections/_wiki/javascript/p5.js.md
@@ -35,8 +35,8 @@ function setup() {
 // Initialise variables
 let xBall = 200;
 let yBall = 200;
-let xSpeed = 10;
-let ySpeed = 10;
+let xSpeed = 2;
+let ySpeed = 5;
 let scoreOne = 0;
 let scoreTwo = 0;
 let playerOne = 175;
@@ -45,13 +45,13 @@ let playerTwo = 175;
 // draw() loops forever until stopped
 function draw() {
   background("#FFFFFF");
-  circle(200, 200, 20);
-  rect(200, 0, 1, 400);
-  rect(30, playerOne, 10, 50);
-  rect(370, playerTwo, 10, 50);
+  circle(xBall, yBall, 20); // ball position
+  rect(200, 0, 1, 400); // line in the middle
+  rect(30, playerOne, 10, 50);  // paddle 1
+  rect(370, playerTwo, 10, 50); // paddle 2
   
-  move();
-  bounce()
+  moveBall();
+  bounceBall()
   keyPressed();
 }
 
@@ -68,13 +68,12 @@ function keyPressed() {
   }
 }
 
-function move() {
+function moveBall() {
   xBall += xSpeed;
   yBall += ySpeed;
 }
 
-function bounce() {
-
+function bounceBall() {
   if (xBall < 10){
     scoreTwo++;
     resetBall()
@@ -83,9 +82,14 @@ function bounce() {
     scoreOne++;
     resetBall()
   }
-  if (yBall < 10 || yBall > 400 - 10) {
+  if (yBall < 10 || yBall > 390) {
     ySpeed *= -1;
   }
+}
+
+function resetBall() {
+  xBall = 200;
+  yBall= 200;
 }
 ```
 
