Update code from class

--- a/collections/_wiki/javascript/p5.js.md
+++ b/collections/_wiki/javascript/p5.js.md
@@ -47,24 +47,38 @@ function draw() {
   background("#FFFFFF");
   circle(xBall, yBall, 20); // ball position
   rect(200, 0, 1, 400); // line in the middle
-  rect(30, playerOne, 10, 50);  // paddle 1
-  rect(370, playerTwo, 10, 50); // paddle 2
+  rect(30, playerOne, 10, 60);  // paddle 1
+  rect(370, playerTwo, 10, 60); // paddle 2
   
   moveBall();
   bounceBall()
   keyPressed();
+  paddleBounce();
+  
+  // display score
+  textSize(16);
+  text("Score " + scoreOne, 75, 30);
+  text("Score " + scoreTwo, 275, 30);
 }
 
 // keyPressed() is called once every time a key is pressed
 function keyPressed() {
   if (key == "w") {
-    playerOne -= 5;
+    if (playerOne > 0) {
+      playerOne -= 10;
+    }
   } else if (key == "s") {
-    playerOne += 5; 
-  } else if (key == "i") {
-    playerTwo -= 5;
-  } else if (key == "k") {
-    playerTwo += 5;
+      if (playerOne < 340) {
+        playerOne += 10; 
+      }
+  } else if (keyCode == UP_ARROW) {
+      if (playerTwo > 0) {
+        playerTwo -= 10;    
+      }
+  } else if (keyCode == DOWN_ARROW) {
+      if (playerTwo < 340) {
+        playerTwo += 10;
+      }
   }
 }
 
@@ -90,6 +104,17 @@ function bounceBall() {
 function resetBall() {
   xBall = 200;
   yBall= 200;
+}
+
+function paddleBounce() {
+  // left paddle
+  if (xBall < 45 && (yBall > playerOne) && (yBall < playerOne + 60)) {
+    xSpeed *= -1.1;
+  }
+  // right paddle
+  if (xBall > 355 && (yBall > playerTwo) && (yBall < playerTwo + 60)) {
+    xSpeed += -1.1;
+  }
 }
 ```
 
